--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -74,7 +74,7 @@
         <br/>
         {{blog.pub_date}}
         <br/>
-        <img class="img-fluid" src="{{ blog.image.url}}" height=200 width=200/>
+        <img src="{{ blog.image.url}}" height=200 width=200/>
         <br/>
         <p>{{blog.body}}</p>
         {% endfor %}
