--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -8,7 +8,8 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>My Blogs</title>
+
+    <title>{{ blog.titles }}</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/album/">
 
@@ -65,20 +66,17 @@
 
     <a class="container">
 
-        <h1 class="text-center pt-3">This is my Blog page</h1>
-    <br/>
+
+
+
+        <h1 class="text-center pt-3">{{blog.titles}}</h1>
         <br/>
-        <h2>Latest post</h2>
-        <hr/>
-        {% for blog in blogs.all %}
-        <a href="{% url 'detail' blog.id %}"><h3>{{blog.titles}}</h3></a>
+        <p>{{blog.pub_date_modified}}</p>
         <br/>
-        {{blog.pub_date_modified}}
-        <br/>
-        <img class="img-responsive" src="{{ blog.image.url}}" height="200" width="200"  style="display: block; margin-left: auto; margin-right: auto;"/>
+        <img class="img-fluid" src="{{ blog.image.url}}" height="400" width="400" style="display: block; margin-left: auto; margin-right: auto;"/>
         <br/>
         <p>{{blog.summary}}</p>
-        {% endfor %}
+
 
     </div>
 
