--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -19,13 +19,13 @@
 
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="{% url 'home' %}">Shivam</a>
+      <a class="navbar-brand" href="{% url 'home' %}">Shivam Jathar</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav ml-auto">
-          <a class="nav-item nav-link" href="http://twitter.com/nickchuckwalter">Twitter</a>
+          <a class="nav-item nav-link" href="http://www.google.com">Google</a>
           <a class="nav-item nav-link" href="{% static 'resume.pdf' %}">Resume</a>
           <a class="nav-item nav-link" href="{% url 'allblogs' %}">Blog</a>
         </div>
