--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -1,6 +1,7 @@
 
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
   <head>
       {% load static %}
     <meta charset="utf-8">
@@ -45,6 +46,7 @@
     <link href="album.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
     <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'home' %}">Shivam Jathar</a>
@@ -77,10 +79,10 @@
         <br/>
         <img class="img-responsive" src="{{ blog.image.url}}" height="200" width="200"  style="display: block; margin-left: auto; margin-right: auto;"/>
         <br/>
-        <p>{{blog.summary}}</p>
+        </textarea>{{blog.summary}}</textarea>
         {% endfor %}
 
-    </div>
+
 
 
 
