--- a/blog/templates/blog/detail.html
+++ b/blog/templates/blog/detail.html
@@ -46,6 +46,7 @@
     <link href="album.css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
     <header>
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'home' %}">Shivam Jathar</a>
