--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
   {% load static %}
   <meta charset="utf-8">
@@ -12,7 +12,7 @@
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -40,8 +40,44 @@
         <h1 class="jumbotron-heading">Hi, I'm Shivam.</h1>
         <p class="lead text-muted">Hey, my name is Shivam Jathar and I love to make Django websites. It's the thrill of handling the requests that the people want!</p>
         <p>
-          <a href="mailto:shivshopextra011@gmail.com.com" class="btn btn-primary my-2">Email Me</a>
+          <a href="mailto:shivshopextra011@gmail.com.com?subject=Feedback" class="btn btn-primary my-2">Email Me</a>
         </p>
+
+            <style>
+             .fa {
+              padding: 20px;
+              font-size: 15px;
+              width: 50px;
+              text-align: center;
+              text-decoration: none;
+              margin: 5px 2px;
+              border-radius: 50%;
+              }
+
+             .fa:hover {
+             opacity: 0.7;
+              }
+
+             .fa-facebook {
+             background: #3B5998;
+             color: white;
+             }
+             .fa-linkedin {
+             background: #007bb5;
+             color: white;
+             }
+             .fa-youtube {
+              background: #bb0000;
+              color: white;
+              }
+             </style>
+        <div>
+
+          <a href="#" class="fa fa-facebook"></a>
+          <a href="#" class="fa fa-linkedin"></a>
+          <a href="#" class="fa fa-youtube"></a>
+        </div>
+      <br>
         <img src="{% static 'Shivam.PNG' %}" height="300" />
       </div>
     </section>
