--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -40,7 +40,7 @@
         <h1 class="jumbotron-heading">Hi, I'm Shivam.</h1>
         <p class="lead text-muted">Hey, my name is Shivam Jathar and I love to make Django websites. It's the thrill of handling the requests that the people want!</p>
         <p>
-          <a href="mailto:shivshopextra011@gmail.com.com?subject=Feedback" class="btn btn-primary my-2">Email Me</a>
+          <a href="mailto:shivshopextra011@gmail.com?subject=Feedback" class="btn btn-primary my-2">Email Me</a>
         </p>
 
             <style>
